--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #000000;
+  background-color: #FEFEFE;
   /*color:#ABF9FF;*/
   overflow:hidden;
   margin: 0;
@@ -8,12 +8,12 @@ body {
 
 canvas {
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate3d( -50%, -50%, 0 );
+    /*top: 50%;*/
+    /*left: 50%;*/
+    /*transform: translate3d( -50%, -50%, 0 );*/
     max-width: 100%;
     max-height: 100%;
-    height: 100%;
+    width: 100%;
 
     image-rendering: optimizeSpeed;             /* Older versions of FF          */
     image-rendering: -moz-crisp-edges;          /* FF 6.0+                       */
