--- a/src/style.css
+++ b/src/style.css
@@ -8,12 +8,11 @@ body {
 
 canvas {
     position: fixed;
-    /*top: 50%;*/
-    /*left: 50%;*/
-    /*transform: translate3d( -50%, -50%, 0 );*/
+    left: 50%;
+    transform: translate3d( -50%, 0, 0 );
     max-width: 100%;
     max-height: 100%;
-    width: 100%;
+    height: 100%;
 
     image-rendering: optimizeSpeed;             /* Older versions of FF          */
     image-rendering: -moz-crisp-edges;          /* FF 6.0+                       */
